--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -197,6 +197,78 @@
    "source": [
     "get_predict(x=2,y=\"3\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# download data from g-drive\n",
+    "import gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id = url.split(\"/\")[-2]\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3&confirm=t&uuid=e6641d03-9228-44b1-92ea-2ed8cc8378b7\n",
+      "To: c:\\Users\\HP\\project\\kideny_disease_classification\\research\\kidney-CT-Scan-data.zip\n",
+      "100%|██████████| 57.7M/57.7M [00:19<00:00, 2.98MB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'kidney-CT-Scan-data.zip'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix = 'https://drive.google.com/uc?/export=download&id='\n",
+    "gdown.download(prefix+file_id, \"kidney-CT-Scan-data.zip\")"
+   ]
   }
  ],
  "metadata": {
